fix skip-to height misalignment

--- a/src/components/masthead/_masthead.scss
+++ b/src/components/masthead/_masthead.scss
@@ -11,6 +11,7 @@ $masthead-text-light: #ffffff;
   width: 100%;
 
   &__link {
+    @include font-size('xxs');
     @include nsw-spacing(padding, xs md);
     @include z-index('middle');
     background-color: $masthead-brand-dark;
